--- a/labs/lab01/CMakeLists.txt
+++ b/labs/lab01/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(lambda lambda.cpp)
 add_executable(lambda-thread lambda-thread.cpp)
 add_executable(timing timing.cpp)
 add_executable(monte-carlo-pi monte-carlo-pi.cpp)
+add_executable(million-num-min million-num-min.cpp)
