Initial commit with working kernel exec
Initial commit with working kernel set up and execution
Kernal now needs to be written and finalised for testing
Added CL file to library for project and copy for execution

--- a/labs/cw2/CMakeLists.txt
+++ b/labs/cw2/CMakeLists.txt
@@ -7,10 +7,16 @@ find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
-file(GLOB_RECURSE SOURCE_FILES lib_nqueens_bit ./lib_nqueens_bit/*.cpp ./lib_nqueens_bit/*.h)
+find_package(OpenCL)
+include_directories(${OpenCL_INCLUDE_DIRS})
+link_libraries(${OpenCL_LIBRARIES})
+
+file(GLOB_RECURSE SOURCE_FILES lib_nqueens_bit ./lib_nqueens_bit/*.cpp ./lib_nqueens_bit/*.h ./lib_nqueens_bit/*.cl)
 add_library(lib_nqueens_bit STATIC ${SOURCE_FILES})
 target_include_directories(lib_nqueens_bit INTERFACE "${CMAKE_SOURCE_DIR}/lib_nqueens_bit/")
 target_link_libraries(lib_nqueens_bit) 
+
+configure_file(./lib_nqueens_bit/nqueens_solver.cl nqueens_solver.cl COPYONLY)
 
 add_executable(NQueens nqueens.cpp)
 target_link_libraries(NQueens lib_nqueens_bit)
